objects/DMAPP__DM_DVLS_Module__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the eLearning Modules. These can be accessed as a detail section on the Curriculum page</description>
    <fields>
        <fullName>DMAPP__DM_DVLS_Curriculum__c</fullName>
        <label>Curriculum</label>
        <referenceTo>DMAPP__DM_DVLS_Curriculum__c</referenceTo>
        <relationshipLabel>Modules</relationshipLabel>
        <relationshipName>DM_DVLS_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <inlineHelpText>Overview of the module.

This is displayed to the user on click of the &apos;i&apos; icon to the right of the module name in the eLearning player.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Order__c</fullName>
        <inlineHelpText>Position in which the module is displayed within the curriculum.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question_Rollup__c</fullName>
        <inlineHelpText>Automatic calculation of the number of questions within the module (sum of the questions in each component). Used to determine the user&apos;s current overall &quot;score&quot; in the underlying tests.</inlineHelpText>
        <label>Question Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Component__c.DMAPP__Question_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Component__c.DMAPP__DM_DVLS_Module__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Quicklink_Rollup__c</fullName>
        <label>Quicklink Rollup</label>
        <summarizedField>DMAPP__DM_DVLS_Component__c.DMAPP__Quicklink_Rollup__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_DVLS_Component__c.DMAPP__DM_DVLS_Module__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Ref_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique reference for the module. This value is used when associating a module with a curriculum and/or components with a module.</inlineHelpText>
        <label>Ref ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Module</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eLearning Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>